maj du js pour changer la couleur de la seconde peau

--- a/src/accessoir.html
+++ b/src/accessoir.html
@@ -56,6 +56,9 @@
     <section class="w-full p-4">
       <h1 class="text-3xl font-bold text-white mb-4 text-center">Collection d'accessoires</h1>
       <div class="grid grid-cols-3 sm:grid-cols-2 md:grid-cols-3 gap-4" id="gallery"></div>
+      <a href="secondepeaux.html">
+      <img src="img/accessoire/seconde-peau-noir.jpg" alt="seconde peau">
+    </a>
     </section>
   </main>
 
@@ -65,7 +68,7 @@
         { type: 'Torse/Poitrine', title: 'Torse', price: '65€', description: 'Torse nu idéal pour cosplayer Grey ou encore Hashibira Inosuke.', image: 'img/accessoire/torse.jpg', sizes: ['S', 'M', 'L', 'XL'] },
         { type: 'Binder', title: 'Binder', price: '4€', description: 'Pièce de sous-vêtement moulante utilisée pour aplatir la poitrine de manière efficace et indolore.', image: 'img/accessoire/acce (2).jpg', sizes: ['S', 'M', 'L', 'XL'] },
         { type: 'Gaine', title: 'Gaine', price: '7€', description: 'La gaine minceur est un vêtement permettant d\'affiner et raffermir votre silhouette.', image: 'img/accessoire/acce (3).jpg', sizes: ['S', 'M', 'L', 'XL'] },
-        { type: 'Seconde-peau', title: 'Seconde Peau Noir', price: '10€', description: 'Idéal pour cosplayer de personnages comme les Simpson sans devoir peindre tout son corps.', image: 'img/accessoire/seconde-peau-noir.jpg', sizes: ['S', 'M', 'L', 'XL'] },
+        { type: 'Seconde-peau', title: 'Ceinture', price: '10€', description: 'Ceinture.', image: 'img/accessoire/acc.jfif', sizes: ['S', 'M', 'L', 'XL'] },
         { type: 'Autres', title: 'Épaule Plumes', price: '15€', description: 'Accessoire pour cosplay, parfait pour des personnages de type plume.', image: 'img/accessoire/acce (4).jpg', sizes: ['S', 'M', 'L', 'XL'] },
         { type: 'Torse/Poitrine', title: 'Poitrine', price: '65€', description: 'Poitrine pour cosplay.', image: 'img/accessoire/acce (5).jpg', sizes: ['S', 'M', 'L', 'XL'] }
     ];
