--- a/src/footer.html
+++ b/src/footer.html
@@ -5,7 +5,7 @@
 <footer class="flex flex-col items-center bg-zinc-50 text-center text-surface dark:bg-neutral-700 opacity-70 dark:text-white fixed bottom-0 w-full">
   <div class="border-t-2 border-gray-600 my-6"></div>
 
-  <div class="container flex justify-center space-x-4 mb-6">
+  <div class="container flex  space-x-4 mb-6 absolute bottom-0 left-0">
     <!-- Facebook -->
     <a href="https://www.facebook.com/" class="text-lg hover:text-blue-500">
       <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 320 512" class="h-5 w-5">
@@ -26,6 +26,9 @@
         <path d="M224.1 141c-63.6 0-115.7 51.2-115.7 115.7S160.5 372.3 224.1 372.3s115.7-51.2 115.7-115.7-51.2-115.6-115.7-115.6zm0 186.1c-38.8 0-70.4-31.6-70.4-70.4s31.6-70.4 70.4-70.4c38.8 0 70.4 31.6 70.4 70.4s-31.6 70.4-70.4 70.4zm146.5-207.6c0 13.3-10.7 24-24 24-13.3 0-24-10.7-24-24 0-13.3 10.7-24 24-24 13.3 0 24 10.7 24 24zm76.4 24.3c-3.9-5.5-10.7-9.2-18.2-9.2h-40.3c-7.5 0-14.3 3.7-18.2 9.2-3.9 5.5-5.3 12.4-5.3 18.8v40.2c0 7.5 3.7 14.3 9.2 18.2 5.5 3.9 12.4 5.3 18.8 5.3h40.3c7.5 0 14.3-3.7 18.2-9.2 3.9-5.5 5.3-12.4 5.3-18.8v-40.2c0-7.5-3.7-14.3-9.2-18.2zm-39.5 59.2c0 41.1-33.4 74.5-74.5 74.5H116.4c-41.1 0-74.5-33.4-74.5-74.5V116.4c0-41.1 33.4-74.5 74.5-74.5h159.7c41.1 0 74.5 33.4 74.5 74.5v159.7zm74.5-159.7c0-77.3-62.9-140.2-140.2-140.2H140.1C62.9 0 0 62.9 0 140.2v159.7c0 77.3 62.9 140.2 140.2 140.2h159.7c77.3 0 140.2-62.9 140.2-140.2V140.2z"/>
       </svg>
     </a>
+  </div>
+  <div class="container flex  space-x-4 mb-6 ">
+    <p class="absolute bottom-0 right-0">+32******* <br> adresse:</p>
   </div>
 
   <p class="text-sm text-gray-400">&copy; 2024 Cosplay univers</p>
